// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionInput snapshots should match snapshot for loading state 1`] = `
<div>
  <div
    class="border-t-2 w-full max-w-full overflow-hidden"
    style="background-color: rgb(255, 255, 255); border-top-color: #d6d3d1;"
  >
    <button
      class="md:hidden w-full p-2.5 flex items-center justify-between transition-colors"
      style="background-color: rgb(231, 229, 228); border-bottom: 1px solid #d6d3d1;"
    >
      <span
        class="text-xs font-bold uppercase flex items-center gap-1.5"
        style="color: rgb(28, 25, 23);"
      >
        Actions
        <span
          class="text-[10px] px-1.5 py-0.5 rounded-full"
          style="background-color: rgb(28, 25, 23); color: rgb(245, 245, 244);"
        >
          6
        </span>
      </span>
      <span
        class="flex items-center gap-1 text-[10px]"
        style="color: rgb(120, 113, 108);"
      >
        Hide
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down w-3.5 h-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </span>
    </button>
    <div
      class="p-1.5 md:p-6 block"
    >
      <div
        class="max-w-full md:max-w-5xl mx-auto"
      >
        <div
          class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-3 gap-1 md:gap-2"
        >
          <button
            class="p-1.5 md:p-3 border-2 text-left transition-all disabled:opacity-50 disabled:cursor-not-allowed hover:-translate-y-0.5 min-w-0 overflow-hidden"
            style="background-color: rgb(255, 255, 255); border-color: #d6d3d1; color: rgb(28, 25, 23);"
          >
            <div
              class="font-bold uppercase text-[9px] md:text-sm mb-0.5 md:mb-2 line-clamp-2 break-words"
            >
              Look around
            </div>
            <div
              class="flex items-center gap-1 md:gap-3 text-[9px] md:text-xs flex-wrap"
            >
              <span
                class="flex items-center gap-0.5"
                style="color: rgb(120, 113, 108);"
                title="Find something"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-sparkles w-2.5 h-2.5 md:w-3 md:h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
                  />
                  <path
                    d="M20 2v4"
                  />
                  <path
                    d="M22 4h-4"
                  />
                  <circle
                    cx="4"
                    cy="20"
                    r="2"
                  />
                </svg>
                10
                %
              </span>
              <span
                class="flex items-center gap-0.5"
                style="color: rgb(120, 113, 108);"
                title="Get spotted"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-triangle-alert w-2.5 h-2.5 md:w-3 md:h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
                  />
                  <path
                    d="M12 9v4"
                  />
                  <path
                    d="M12 17h.01"
                  />
                </svg>
                5
                %
              </span>
            </div>
          </button>
          <button
            class="p-1.5 md:p-3 border-2 text-left transition-all disabled:opacity-50 disabled:cursor-not-allowed hover:-translate-y-0.5 min-w-0 overflow-hidden"
            style="background-color: rgb(255, 255, 255); border-color: #d6d3d1; color: rgb(28, 25, 23);"
          >
            <div
              class="font-bold uppercase text-[9px] md:text-sm mb-0.5 md:mb-2 line-clamp-2 break-words"
            >
              Talk to merchant
            </div>
            <div
              class="flex items-center gap-1 md:gap-3 text-[9px] md:text-xs flex-wrap"
            >
              <span
                class="flex items-center gap-0.5"
                style="color: rgb(68, 64, 60);"
                title="Get info"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-sparkles w-2.5 h-2.5 md:w-3 md:h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
                  />
                  <path
                    d="M20 2v4"
                  />
                  <path
                    d="M22 4h-4"
                  />
                  <circle
                    cx="4"
                    cy="20"
                    r="2"
                  />
                </svg>
                20
                %
              </span>
              <span
                class="flex items-center gap-0.5"
                style="color: rgb(120, 113, 108);"
                title="Offend them"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-triangle-alert w-2.5 h-2.5 md:w-3 md:h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
                  />
                  <path
                    d="M12 9v4"
                  />
                  <path
                    d="M12 17h.01"
                  />
                </svg>
                10
                %
              </span>
            </div>
          </button>
          <button
            class="p-1.5 md:p-3 border-2 text-left transition-all disabled:opacity-50 disabled:cursor-not-allowed hover:-translate-y-0.5 min-w-0 overflow-hidden"
            style="background-color: rgb(255, 255, 255); border-color: #d6d3d1; color: rgb(28, 25, 23);"
          >
            <div
              class="font-bold uppercase text-[9px] md:text-sm mb-0.5 md:mb-2 line-clamp-2 break-words"
            >
              Move forward
            </div>
            <div
              class="flex items-center gap-1 md:gap-3 text-[9px] md:text-xs flex-wrap"
            >
              <span
                class="flex items-center gap-0.5"
                style="color: rgb(68, 64, 60);"
                title="Progress"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-sparkles w-2.5 h-2.5 md:w-3 md:h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
                  />
                  <path
                    d="M20 2v4"
                  />
                  <path
                    d="M22 4h-4"
                  />
                  <circle
                    cx="4"
                    cy="20"
                    r="2"
                  />
                </svg>
                15
                %
              </span>
              <span
                class="flex items-center gap-0.5"
                style="color: rgb(217, 119, 6);"
                title="Danger"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-triangle-alert w-2.5 h-2.5 md:w-3 md:h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
                  />
                  <path
                    d="M12 9v4"
                  />
                  <path
                    d="M12 17h.01"
                  />
                </svg>
                15
                %
              </span>
            </div>
          </button>
          <button
            class="p-1.5 md:p-3 border-2 text-left transition-all disabled:opacity-50 disabled:cursor-not-allowed hover:-translate-y-0.5 min-w-0 overflow-hidden"
            style="background-color: rgb(255, 255, 255); border-color: #d6d3d1; color: rgb(28, 25, 23);"
          >
            <div
              class="font-bold uppercase text-[9px] md:text-sm mb-0.5 md:mb-2 line-clamp-2 break-words"
            >
              Check inventory
            </div>
            <div
              class="flex items-center gap-1 md:gap-3 text-[9px] md:text-xs flex-wrap"
            >
              <span
                class="flex items-center gap-0.5"
                style="color: rgb(120, 113, 108);"
                title="Find item"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-sparkles w-2.5 h-2.5 md:w-3 md:h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
                  />
                  <path
                    d="M20 2v4"
                  />
                  <path
                    d="M22 4h-4"
                  />
                  <circle
                    cx="4"
                    cy="20"
                    r="2"
                  />
                </svg>
                5
                %
              </span>
            </div>
          </button>
          <button
            class="p-1.5 md:p-3 border-2 text-left transition-all disabled:opacity-50 disabled:cursor-not-allowed hover:-translate-y-0.5 min-w-0 overflow-hidden"
            style="background-color: rgb(255, 255, 255); border-color: #d6d3d1; color: rgb(28, 25, 23);"
          >
            <div
              class="font-bold uppercase text-[9px] md:text-sm mb-0.5 md:mb-2 line-clamp-2 break-words"
            >
              Rest
            </div>
            <div
              class="flex items-center gap-1 md:gap-3 text-[9px] md:text-xs flex-wrap"
            >
              <span
                style="color: rgb(120, 113, 108);"
              >
                Safe
              </span>
            </div>
          </button>
          <button
            class="p-1.5 md:p-3 border-2 border-dashed text-left font-bold uppercase transition-all disabled:opacity-50 disabled:cursor-not-allowed text-[9px] md:text-sm flex items-center gap-1 md:gap-2 min-w-0 overflow-hidden"
            style="border-color: #d6d3d1; background-color: rgb(231, 229, 228); color: rgb(120, 113, 108);"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-ellipsis w-3 h-3 md:w-4 md:h-4 flex-shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="1"
              />
              <circle
                cx="19"
                cy="12"
                r="1"
              />
              <circle
                cx="5"
                cy="12"
                r="1"
              />
            </svg>
            <span
              class="truncate"
            >
              Custom Action
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ActionInput snapshots should match snapshot for processing state 1`] = `
<div>
  <div
    class="border-t-2 w-full max-w-full overflow-hidden"
    style="background-color: rgb(255, 255, 255); border-top-color: #d6d3d1;"
  >
    <button
      class="md:hidden w-full p-2.5 flex items-center justify-between transition-colors"
      style="background-color: rgb(231, 229, 228); border-bottom: 1px solid #d6d3d1;"
    >
      <span
        class="text-xs font-bold uppercase flex items-center gap-1.5"
        style="color: rgb(28, 25, 23);"
      >
        Actions
        <span
          class="text-[10px] px-1.5 py-0.5 rounded-full"
          style="background-color: rgb(28, 25, 23); color: rgb(245, 245, 244);"
        >
          1
        </span>
      </span>
      <span
        class="flex items-center gap-1 text-[10px]"
        style="color: rgb(120, 113, 108);"
      >
        Hide
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down w-3.5 h-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </span>
    </button>
    <div
      class="p-1.5 md:p-6 block"
    >
      <div
        class="max-w-full md:max-w-5xl mx-auto"
      >
        <div
          class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-3 gap-1 md:gap-2"
        >
          <button
            class="p-1.5 md:p-3 border-2 border-dashed text-left font-bold uppercase transition-all disabled:opacity-50 disabled:cursor-not-allowed text-[9px] md:text-sm flex items-center gap-1 md:gap-2 min-w-0 overflow-hidden"
            disabled=""
            style="border-color: #d6d3d1; background-color: rgb(231, 229, 228); color: rgb(120, 113, 108);"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-ellipsis w-3 h-3 md:w-4 md:h-4 flex-shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="1"
              />
              <circle
                cx="19"
                cy="12"
                r="1"
              />
              <circle
                cx="5"
                cy="12"
                r="1"
              />
            </svg>
            <span
              class="truncate"
            >
              Custom Action
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ActionInput snapshots should match snapshot with different language 1`] = `
<div>
  <div
    class="border-t-2 w-full max-w-full overflow-hidden"
    style="background-color: rgb(255, 255, 255); border-top-color: #d6d3d1;"
  >
    <button
      class="md:hidden w-full p-2.5 flex items-center justify-between transition-colors"
      style="background-color: rgb(231, 229, 228); border-bottom: 1px solid #d6d3d1;"
    >
      <span
        class="text-xs font-bold uppercase flex items-center gap-1.5"
        style="color: rgb(28, 25, 23);"
      >
        Actions
        <span
          class="text-[10px] px-1.5 py-0.5 rounded-full"
          style="background-color: rgb(28, 25, 23); color: rgb(245, 245, 244);"
        >
          6
        </span>
      </span>
      <span
        class="flex items-center gap-1 text-[10px]"
        style="color: rgb(120, 113, 108);"
      >
        Hide
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down w-3.5 h-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </span>
    </button>
    <div
      class="p-1.5 md:p-6 block"
    >
      <div
        class="max-w-full md:max-w-5xl mx-auto"
      >
        <div
          class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-3 gap-1 md:gap-2"
        >
          <button
            class="p-1.5 md:p-3 border-2 text-left transition-all disabled:opacity-50 disabled:cursor-not-allowed hover:-translate-y-0.5 min-w-0 overflow-hidden"
            style="background-color: rgb(255, 255, 255); border-color: #d6d3d1; color: rgb(28, 25, 23);"
          >
            <div
              class="font-bold uppercase text-[9px] md:text-sm mb-0.5 md:mb-2 line-clamp-2 break-words"
            >
              Look around
            </div>
            <div
              class="flex items-center gap-1 md:gap-3 text-[9px] md:text-xs flex-wrap"
            >
              <span
                class="flex items-center gap-0.5"
                style="color: rgb(120, 113, 108);"
                title="Find something"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-sparkles w-2.5 h-2.5 md:w-3 md:h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
                  />
                  <path
                    d="M20 2v4"
                  />
                  <path
                    d="M22 4h-4"
                  />
                  <circle
                    cx="4"
                    cy="20"
                    r="2"
                  />
                </svg>
                10
                %
              </span>
              <span
                class="flex items-center gap-0.5"
                style="color: rgb(120, 113, 108);"
                title="Get spotted"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-triangle-alert w-2.5 h-2.5 md:w-3 md:h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
                  />
                  <path
                    d="M12 9v4"
                  />
                  <path
                    d="M12 17h.01"
                  />
                </svg>
                5
                %
              </span>
            </div>
          </button>
          <button
            class="p-1.5 md:p-3 border-2 text-left transition-all disabled:opacity-50 disabled:cursor-not-allowed hover:-translate-y-0.5 min-w-0 overflow-hidden"
            style="background-color: rgb(255, 255, 255); border-color: #d6d3d1; color: rgb(28, 25, 23);"
          >
            <div
              class="font-bold uppercase text-[9px] md:text-sm mb-0.5 md:mb-2 line-clamp-2 break-words"
            >
              Talk to merchant
            </div>
            <div
              class="flex items-center gap-1 md:gap-3 text-[9px] md:text-xs flex-wrap"
            >
              <span
                class="flex items-center gap-0.5"
                style="color: rgb(68, 64, 60);"
                title="Get info"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-sparkles w-2.5 h-2.5 md:w-3 md:h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
                  />
                  <path
                    d="M20 2v4"
                  />
                  <path
                    d="M22 4h-4"
                  />
                  <circle
                    cx="4"
                    cy="20"
                    r="2"
                  />
                </svg>
                20
                %
              </span>
              <span
                class="flex items-center gap-0.5"
                style="color: rgb(120, 113, 108);"
                title="Offend them"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-triangle-alert w-2.5 h-2.5 md:w-3 md:h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
                  />
                  <path
                    d="M12 9v4"
                  />
                  <path
                    d="M12 17h.01"
                  />
                </svg>
                10
                %
              </span>
            </div>
          </button>
          <button
            class="p-1.5 md:p-3 border-2 text-left transition-all disabled:opacity-50 disabled:cursor-not-allowed hover:-translate-y-0.5 min-w-0 overflow-hidden"
            style="background-color: rgb(255, 255, 255); border-color: #d6d3d1; color: rgb(28, 25, 23);"
          >
            <div
              class="font-bold uppercase text-[9px] md:text-sm mb-0.5 md:mb-2 line-clamp-2 break-words"
            >
              Move forward
            </div>
            <div
              class="flex items-center gap-1 md:gap-3 text-[9px] md:text-xs flex-wrap"
            >
              <span
                class="flex items-center gap-0.5"
                style="color: rgb(68, 64, 60);"
                title="Progress"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-sparkles w-2.5 h-2.5 md:w-3 md:h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
                  />
                  <path
                    d="M20 2v4"
                  />
                  <path
                    d="M22 4h-4"
                  />
                  <circle
                    cx="4"
                    cy="20"
                    r="2"
                  />
                </svg>
                15
                %
              </span>
              <span
                class="flex items-center gap-0.5"
                style="color: rgb(217, 119, 6);"
                title="Danger"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-triangle-alert w-2.5 h-2.5 md:w-3 md:h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
                  />
                  <path
                    d="M12 9v4"
                  />
                  <path
                    d="M12 17h.01"
                  />
                </svg>
                15
                %
              </span>
            </div>
          </button>
          <button
            class="p-1.5 md:p-3 border-2 text-left transition-all disabled:opacity-50 disabled:cursor-not-allowed hover:-translate-y-0.5 min-w-0 overflow-hidden"
            style="background-color: rgb(255, 255, 255); border-color: #d6d3d1; color: rgb(28, 25, 23);"
          >
            <div
              class="font-bold uppercase text-[9px] md:text-sm mb-0.5 md:mb-2 line-clamp-2 break-words"
            >
              Check inventory
            </div>
            <div
              class="flex items-center gap-1 md:gap-3 text-[9px] md:text-xs flex-wrap"
            >
              <span
                class="flex items-center gap-0.5"
                style="color: rgb(120, 113, 108);"
                title="Find item"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-sparkles w-2.5 h-2.5 md:w-3 md:h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
                  />
                  <path
                    d="M20 2v4"
                  />
                  <path
                    d="M22 4h-4"
                  />
                  <circle
                    cx="4"
                    cy="20"
                    r="2"
                  />
                </svg>
                5
                %
              </span>
            </div>
          </button>
          <button
            class="p-1.5 md:p-3 border-2 text-left transition-all disabled:opacity-50 disabled:cursor-not-allowed hover:-translate-y-0.5 min-w-0 overflow-hidden"
            style="background-color: rgb(255, 255, 255); border-color: #d6d3d1; color: rgb(28, 25, 23);"
          >
            <div
              class="font-bold uppercase text-[9px] md:text-sm mb-0.5 md:mb-2 line-clamp-2 break-words"
            >
              Rest
            </div>
            <div
              class="flex items-center gap-1 md:gap-3 text-[9px] md:text-xs flex-wrap"
            >
              <span
                style="color: rgb(120, 113, 108);"
              >
                Seguro
              </span>
            </div>
          </button>
          <button
            class="p-1.5 md:p-3 border-2 border-dashed text-left font-bold uppercase transition-all disabled:opacity-50 disabled:cursor-not-allowed text-[9px] md:text-sm flex items-center gap-1 md:gap-2 min-w-0 overflow-hidden"
            style="border-color: #d6d3d1; background-color: rgb(231, 229, 228); color: rgb(120, 113, 108);"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-ellipsis w-3 h-3 md:w-4 md:h-4 flex-shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="1"
              />
              <circle
                cx="19"
                cy="12"
                r="1"
              />
              <circle
                cx="5"
                cy="12"
                r="1"
              />
            </svg>
            <span
              class="truncate"
            >
              Ação Personalizada
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ActionInput snapshots should match snapshot with options displayed 1`] = `
<div>
  <div
    class="border-t-2 w-full max-w-full overflow-hidden"
    style="background-color: rgb(255, 255, 255); border-top-color: #d6d3d1;"
  >
    <button
      class="md:hidden w-full p-2.5 flex items-center justify-between transition-colors"
      style="background-color: rgb(231, 229, 228); border-bottom: 1px solid #d6d3d1;"
    >
      <span
        class="text-xs font-bold uppercase flex items-center gap-1.5"
        style="color: rgb(28, 25, 23);"
      >
        Actions
        <span
          class="text-[10px] px-1.5 py-0.5 rounded-full"
          style="background-color: rgb(28, 25, 23); color: rgb(245, 245, 244);"
        >
          6
        </span>
      </span>
      <span
        class="flex items-center gap-1 text-[10px]"
        style="color: rgb(120, 113, 108);"
      >
        Hide
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down w-3.5 h-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </span>
    </button>
    <div
      class="p-1.5 md:p-6 block"
    >
      <div
        class="max-w-full md:max-w-5xl mx-auto"
      >
        <div
          class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-3 gap-1 md:gap-2"
        >
          <button
            class="p-1.5 md:p-3 border-2 text-left transition-all disabled:opacity-50 disabled:cursor-not-allowed hover:-translate-y-0.5 min-w-0 overflow-hidden"
            style="background-color: rgb(255, 255, 255); border-color: #d6d3d1; color: rgb(28, 25, 23);"
          >
            <div
              class="font-bold uppercase text-[9px] md:text-sm mb-0.5 md:mb-2 line-clamp-2 break-words"
            >
              Look around
            </div>
            <div
              class="flex items-center gap-1 md:gap-3 text-[9px] md:text-xs flex-wrap"
            >
              <span
                class="flex items-center gap-0.5"
                style="color: rgb(120, 113, 108);"
                title="Find something"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-sparkles w-2.5 h-2.5 md:w-3 md:h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
                  />
                  <path
                    d="M20 2v4"
                  />
                  <path
                    d="M22 4h-4"
                  />
                  <circle
                    cx="4"
                    cy="20"
                    r="2"
                  />
                </svg>
                10
                %
              </span>
              <span
                class="flex items-center gap-0.5"
                style="color: rgb(120, 113, 108);"
                title="Get spotted"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-triangle-alert w-2.5 h-2.5 md:w-3 md:h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
                  />
                  <path
                    d="M12 9v4"
                  />
                  <path
                    d="M12 17h.01"
                  />
                </svg>
                5
                %
              </span>
            </div>
          </button>
          <button
            class="p-1.5 md:p-3 border-2 text-left transition-all disabled:opacity-50 disabled:cursor-not-allowed hover:-translate-y-0.5 min-w-0 overflow-hidden"
            style="background-color: rgb(255, 255, 255); border-color: #d6d3d1; color: rgb(28, 25, 23);"
          >
            <div
              class="font-bold uppercase text-[9px] md:text-sm mb-0.5 md:mb-2 line-clamp-2 break-words"
            >
              Talk to merchant
            </div>
            <div
              class="flex items-center gap-1 md:gap-3 text-[9px] md:text-xs flex-wrap"
            >
              <span
                class="flex items-center gap-0.5"
                style="color: rgb(68, 64, 60);"
                title="Get info"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-sparkles w-2.5 h-2.5 md:w-3 md:h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
                  />
                  <path
                    d="M20 2v4"
                  />
                  <path
                    d="M22 4h-4"
                  />
                  <circle
                    cx="4"
                    cy="20"
                    r="2"
                  />
                </svg>
                20
                %
              </span>
              <span
                class="flex items-center gap-0.5"
                style="color: rgb(120, 113, 108);"
                title="Offend them"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-triangle-alert w-2.5 h-2.5 md:w-3 md:h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
                  />
                  <path
                    d="M12 9v4"
                  />
                  <path
                    d="M12 17h.01"
                  />
                </svg>
                10
                %
              </span>
            </div>
          </button>
          <button
            class="p-1.5 md:p-3 border-2 text-left transition-all disabled:opacity-50 disabled:cursor-not-allowed hover:-translate-y-0.5 min-w-0 overflow-hidden"
            style="background-color: rgb(255, 255, 255); border-color: #d6d3d1; color: rgb(28, 25, 23);"
          >
            <div
              class="font-bold uppercase text-[9px] md:text-sm mb-0.5 md:mb-2 line-clamp-2 break-words"
            >
              Move forward
            </div>
            <div
              class="flex items-center gap-1 md:gap-3 text-[9px] md:text-xs flex-wrap"
            >
              <span
                class="flex items-center gap-0.5"
                style="color: rgb(68, 64, 60);"
                title="Progress"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-sparkles w-2.5 h-2.5 md:w-3 md:h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
                  />
                  <path
                    d="M20 2v4"
                  />
                  <path
                    d="M22 4h-4"
                  />
                  <circle
                    cx="4"
                    cy="20"
                    r="2"
                  />
                </svg>
                15
                %
              </span>
              <span
                class="flex items-center gap-0.5"
                style="color: rgb(217, 119, 6);"
                title="Danger"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-triangle-alert w-2.5 h-2.5 md:w-3 md:h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
                  />
                  <path
                    d="M12 9v4"
                  />
                  <path
                    d="M12 17h.01"
                  />
                </svg>
                15
                %
              </span>
            </div>
          </button>
          <button
            class="p-1.5 md:p-3 border-2 text-left transition-all disabled:opacity-50 disabled:cursor-not-allowed hover:-translate-y-0.5 min-w-0 overflow-hidden"
            style="background-color: rgb(255, 255, 255); border-color: #d6d3d1; color: rgb(28, 25, 23);"
          >
            <div
              class="font-bold uppercase text-[9px] md:text-sm mb-0.5 md:mb-2 line-clamp-2 break-words"
            >
              Check inventory
            </div>
            <div
              class="flex items-center gap-1 md:gap-3 text-[9px] md:text-xs flex-wrap"
            >
              <span
                class="flex items-center gap-0.5"
                style="color: rgb(120, 113, 108);"
                title="Find item"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-sparkles w-2.5 h-2.5 md:w-3 md:h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
                  />
                  <path
                    d="M20 2v4"
                  />
                  <path
                    d="M22 4h-4"
                  />
                  <circle
                    cx="4"
                    cy="20"
                    r="2"
                  />
                </svg>
                5
                %
              </span>
            </div>
          </button>
          <button
            class="p-1.5 md:p-3 border-2 text-left transition-all disabled:opacity-50 disabled:cursor-not-allowed hover:-translate-y-0.5 min-w-0 overflow-hidden"
            style="background-color: rgb(255, 255, 255); border-color: #d6d3d1; color: rgb(28, 25, 23);"
          >
            <div
              class="font-bold uppercase text-[9px] md:text-sm mb-0.5 md:mb-2 line-clamp-2 break-words"
            >
              Rest
            </div>
            <div
              class="flex items-center gap-1 md:gap-3 text-[9px] md:text-xs flex-wrap"
            >
              <span
                style="color: rgb(120, 113, 108);"
              >
                Safe
              </span>
            </div>
          </button>
          <button
            class="p-1.5 md:p-3 border-2 border-dashed text-left font-bold uppercase transition-all disabled:opacity-50 disabled:cursor-not-allowed text-[9px] md:text-sm flex items-center gap-1 md:gap-2 min-w-0 overflow-hidden"
            style="border-color: #d6d3d1; background-color: rgb(231, 229, 228); color: rgb(120, 113, 108);"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-ellipsis w-3 h-3 md:w-4 md:h-4 flex-shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="1"
              />
              <circle
                cx="19"
                cy="12"
                r="1"
              />
              <circle
                cx="5"
                cy="12"
                r="1"
              />
            </svg>
            <span
              class="truncate"
            >
              Custom Action
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
